[package]
name = "okx"
version = "0.1.0"
edition = "2024"
[build]
rustflags = ["-C", "target-cpu=native"]
[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tokio-tungstenite = {version = "0.28.0", features = ["native-tls"]}
log = "0.4.28"
env_logger = "0.11.8"
chrono ="0.4.42" # local-offset 用于 FixedOffset
reqwest = {version = "0.12.24", features = ["json"]}
once_cell = "1.21.3"
sonic-rs = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"
time = "0.3.44"
uuid = { version = "1.18.1", features = ["v4"] }
dashmap = "7.0.0-rc2"